@@ -84,6 +84,31 @@ specifier|private
 name|long
 name|size
 decl_stmt|;
+DECL|field|indexTerms
+specifier|private
+name|Term
+index|[]
+name|indexTerms
+init|=
+literal|null
+decl_stmt|;
+DECL|field|indexInfos
+specifier|private
+name|TermInfo
+index|[]
+name|indexInfos
+decl_stmt|;
+DECL|field|indexPointers
+specifier|private
+name|long
+index|[]
+name|indexPointers
+decl_stmt|;
+DECL|field|indexEnum
+specifier|private
+name|SegmentTermEnum
+name|indexEnum
+decl_stmt|;
 DECL|method|TermInfosReader
 name|TermInfosReader
 parameter_list|(
@@ -136,8 +161,24 @@ name|origEnum
 operator|.
 name|size
 expr_stmt|;
-name|readIndex
-argument_list|()
+name|indexEnum
+operator|=
+operator|new
+name|SegmentTermEnum
+argument_list|(
+name|directory
+operator|.
+name|openInput
+argument_list|(
+name|segment
+operator|+
+literal|".tii"
+argument_list|)
+argument_list|,
+name|fieldInfos
+argument_list|,
+literal|true
+argument_list|)
 expr_stmt|;
 block|}
 DECL|method|finalize
@@ -239,52 +280,24 @@ return|return
 name|termEnum
 return|;
 block|}
-DECL|field|indexTerms
-name|Term
-index|[]
-name|indexTerms
-init|=
-literal|null
-decl_stmt|;
-DECL|field|indexInfos
-name|TermInfo
-index|[]
-name|indexInfos
-decl_stmt|;
-DECL|field|indexPointers
-name|long
-index|[]
-name|indexPointers
-decl_stmt|;
-DECL|method|readIndex
+DECL|method|ensureIndexIsRead
 specifier|private
 specifier|final
 name|void
-name|readIndex
+name|ensureIndexIsRead
 parameter_list|()
 throws|throws
 name|IOException
 block|{
-name|SegmentTermEnum
-name|indexEnum
-init|=
-operator|new
-name|SegmentTermEnum
-argument_list|(
-name|directory
-operator|.
-name|openInput
-argument_list|(
-name|segment
-operator|+
-literal|".tii"
-argument_list|)
-argument_list|,
-name|fieldInfos
-argument_list|,
-literal|true
-argument_list|)
-decl_stmt|;
+if|if
+condition|(
+name|indexTerms
+operator|!=
+literal|null
+condition|)
+comment|// index already read
+return|return;
+comment|// do nothing
 try|try
 block|{
 name|int
@@ -297,6 +310,7 @@ name|indexEnum
 operator|.
 name|size
 decl_stmt|;
+comment|// otherwise read index
 name|indexTerms
 operator|=
 operator|new
@@ -374,6 +388,10 @@ name|indexEnum
 operator|.
 name|close
 argument_list|()
+expr_stmt|;
+name|indexEnum
+operator|=
+literal|null
 expr_stmt|;
 block|}
 block|}
@@ -533,6 +551,9 @@ condition|)
 return|return
 literal|null
 return|;
+name|ensureIndexIsRead
+argument_list|()
+expr_stmt|;
 comment|// optimize sequential access: first try scanning cached enum w/o seeking
 name|SegmentTermEnum
 name|enumerator
@@ -855,6 +876,9 @@ return|return
 operator|-
 literal|1
 return|;
+name|ensureIndexIsRead
+argument_list|()
+expr_stmt|;
 name|int
 name|indexOffset
 init|=
